# zerobus-flow

./: .gitignore  Justfile  README.md
docs/zerobus/: getting_started.md
zerobus-flow/: Makefile  README.md  main.py  pyproject.toml
zerobus-flow/src/zerobus_flow/: __init__.py  main.py
zerobus-flow/tests/: __init__.py  test_zerobus_flow.py
zerobus-ingest/: MANIFEST.in  Makefile  README.md  buf.gen.yaml  buf.yaml  main.py  pyproject.toml  tox.ini
zerobus-ingest/protos/orders/v1/: orders.proto
zerobus-ingest/scripts/: demo_just.py
zerobus-ingest/src/zerobus_ingest/: __init__.py  main.py
zerobus-ingest/src/zerobus_ingest/config/: __init__.py
zerobus-ingest/src/zerobus_ingest/datagen/: __init__.py  orders.py
zerobus-ingest/src/zerobus_ingest/utils/: __init__.py  orders_file.py  protobuf_utils.py  table_utils.py  volume_utils.py  writer.py
zerobus-ingest/tests/: __init__.py  test_config.py  test_datagen_orders.py  test_main.py  test_orders_file.py  test_table_utils.py  test_volume_utils.py  test_writer.py
zerobus-ingest/tests/resources/: orders_ddl.txt  orders_json_schema.json
